Closed
Bug 1337157
Opened 8 years ago
Closed 7 years ago
privacy.resistFingerprinting should disable WEBGL_debug_renderer_info
Categories
(Core :: Graphics: CanvasWebGL, defect, P2)
Core
Graphics: CanvasWebGL
Tracking
()
RESOLVED
FIXED
mozilla61
People
(Reporter: jgilbert, Assigned: tjr)
References
(Blocks 1 open bug)
Details
(Keywords: dev-doc-complete, Whiteboard: gfx-noted, [tor][fingerprinting])
Attachments
(1 file)
59 bytes,
text/x-review-board-request
|
jgilbert
:
review+
RyanVM
:
approval-mozilla-beta+
|
Details |
No description provided.
Reporter | ||
Updated•8 years ago
|
Whiteboard: gfx-noted
Updated•8 years ago
|
Keywords: dev-doc-needed
This is an assigned P1 bug without activity in two weeks.
If you intend to continue working on this bug for the current release/iteration/sprint, remove the 'stale-bug' keyword.
Otherwise we'll reset the priority of the bug back to '--' on Monday, August 28th.
Keywords: stale-bug
Reporter | ||
Updated•8 years ago
|
Updated•8 years ago
|
Blocks: uplift_tor_fingerprinting
Updated•8 years ago
|
Whiteboard: gfx-noted → gfx-noted, [tor]
Updated•8 years ago
|
Whiteboard: gfx-noted, [tor] → gfx-noted, [tor][fingerprinting]
Assignee | ||
Comment 3•7 years ago
|
||
((If this lands, need to update the fingerprinting wiki page.))
Flags: needinfo?(tom)
Comment hidden (mozreview-request) |
Reporter | ||
Comment 5•7 years ago
|
||
mozreview-review |
Comment on attachment 8963000 [details]
Bug 1337157 Disable WEBGL_debug_renderer_info when Resist Fingerprinting is active
https://reviewboard.mozilla.org/r/231846/#review238132
Attachment #8963000 -
Flags: review?(jgilbert) → review+
Assignee | ||
Updated•7 years ago
|
Pushed by btara@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/35db8e10d775
Disable WEBGL_debug_renderer_info when Resist Fingerprinting is active r=jgilbert
Keywords: checkin-needed
Comment 7•7 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 7 years ago
status-firefox61:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla61
Assignee | ||
Comment 8•7 years ago
|
||
Comment on attachment 8963000 [details]
Bug 1337157 Disable WEBGL_debug_renderer_info when Resist Fingerprinting is active
Approval Request Comment
[Feature/Bug causing the regression]: An improvement to Resist Fingerprinting
[User impact if declined]: Tor will have to carry the patch themselves, and ESR will lack the protection
[Is this code covered by automated tests?]: No
[Has the fix been verified in Nightly?]: Yes
[Needs manual test from QE? If yes, steps to reproduce]: No
[List of other uplifts needed for the feature/fix]: None
[Is the change risky?]: No
[Why is the change risky/not risky?]: One line change to a boolean.
Attachment #8963000 -
Flags: approval-mozilla-beta?
Comment 9•7 years ago
|
||
Comment on attachment 8963000 [details]
Bug 1337157 Disable WEBGL_debug_renderer_info when Resist Fingerprinting is active
Approved for 60.0b9.
Attachment #8963000 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 10•7 years ago
|
||
bugherder uplift |
status-firefox60:
--- → fixed
Comment 11•7 years ago
|
||
(In reply to Tom Ritter [:tjr] from comment #8)
> [Is this code covered by automated tests?]: No
>
> [Has the fix been verified in Nightly?]: Yes
>
> [Needs manual test from QE? If yes, steps to reproduce]: No
>
> [List of other uplifts needed for the feature/fix]: None
>
> [Is the change risky?]: No
>
> [Why is the change risky/not risky?]: One line change to a boolean.
Setting qe-verify- based on Tom's assessment on manual testing needs and the fact that this fix consists of a small, unrisky change.
Flags: qe-verify-
Comment 12•7 years ago
|
||
Developer release notes for Firefox 60:
https://developer.mozilla.org/en-US/Firefox/Releases/60#Canvas_and_WebGL
Reference page update:
https://developer.mozilla.org/en-US/docs/Web/API/WEBGL_debug_renderer_info
Keywords: dev-doc-needed → dev-doc-complete
You need to log in
before you can comment on or make changes to this bug.
Description
•