Bug 1337157 - Disable WEBGL_debug_renderer_info when Resist Fingerprinting is active. r=jgilbert, a=RyanVM

MozReview-Commit-ID: F7LCweFIPtM